--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "my-awesome-greeter",
+  "name": "@kietle2016/my-awesome-greeter",
   "version": "1.0.0",
   "description": "this is the description",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
-  },
+  "main": "",
+  "types": "index.d.ts",
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aandroiderr/my-awesome-greeter.git"
@@ -24,5 +21,6 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.1.3"
-  }
+  },
+  "dependencies": {}
 }
